# exp02-understand

./: ReadMe.md
src/: CMakeLists.txt
src/example01/: CMakeLists.txt  add.h  main.c
src/example02/: CMakeLists.txt  test1.c
src/example03/: CMakeLists.txt  test2.c
src/example04/: CMakeLists.txt  main.cpp  test.cu  test.cuh
